Google-Cloud-Kubernetes/deployment.yaml
# This file configures the hello-world app which serves public web traffic.
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: example-gke
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
    spec:
      containers:
      - name: example-app
        # Replace $GCLOUD_PROJECT with your project ID
        image: gcr.io/machinelearning-xxx/example-gke:latest
        volumeMounts:
          - name: "service-account"
            mountPath: "/var/run/secret/cloud.google.com"
          - name: "certs"
            mountPath: "/etc/ssl/certs"
      volumes:
        - name: "service-account"
          secret:
            secretName: "my-app-sa-key"
        - name: "certs"
          hostPath:
            path: "/etc/ssl/certs"
