Google-Cloud-Kubernetes/allow-all-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
